--- a/movie.html
+++ b/movie.html
@@ -5,6 +5,8 @@
 <title>BUSANSO – Watch</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<script src="movies-data.js"></script>
+
 <style>
 body{
   margin:0;
@@ -21,62 +23,71 @@ body{
   background:#000;
 }
 
-.details{
-  padding:16px;
-}
-
-.meta{
-  color:#aaa;
-  font-size:14px;
-  margin-bottom:10px;
-}
-
-.synopsis{
-  font-size:14px;
-  line-height:1.5;
-  margin-bottom:16px;
-}
+.details{padding:16px}
+.meta{color:#aaa;font-size:14px;margin-bottom:8px}
+.synopsis{font-size:14px;line-height:1.5}
 
 .actions button{
   width:100%;
-  margin-top:8px;
-  padding:12px;
+  margin-top:10px;
+  padding:14px;
   border:none;
   border-radius:8px;
   font-weight:bold;
+  font-size:15px;
   cursor:pointer;
+}
+.watch{background:#e50914;color:#fff}
+.share{background:#222;color:#fff}
+
+/* SHARE SHEET */
+.shareSheet{
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  background:#111;
+  padding:16px;
+  display:none;
+}
+.shareSheet button{
+  width:100%;
+  margin-top:8px;
+  padding:12px;
   background:#222;
   color:#fff;
+  border:none;
+  border-radius:6px;
+}
+
+/* RECOMMENDATIONS */
+.reco{
+  padding:16px;
+}
+.reco h3{margin-bottom:10px}
+.recoRow{
+  display:flex;
+  gap:12px;
+  overflow-x:auto;
+}
+.recoRow img{
+  width:140px;
+  border-radius:8px;
+  cursor:pointer;
 }
 </style>
 </head>
 
 <body>
 
+<!-- 🔐 PIN CHECK -->
 <script>
-/* ===== SAFE PIN CHECK (GITHUB FIXED) ===== */
-document.addEventListener("DOMContentLoaded", () => {
+const pin = localStorage.getItem("activePIN");
+const exp = Number(localStorage.getItem("pinExpiry"));
 
-  const pin = localStorage.getItem("activePIN");
-  const exp = parseInt(localStorage.getItem("pinExpiry"), 10);
-
-  if (!pin || !exp || isNaN(exp)) {
-    redirectLogin();
-    return;
-  }
-
-  if (Date.now() > exp) {
-    localStorage.removeItem("activePIN");
-    localStorage.removeItem("pinExpiry");
-    redirectLogin();
-  }
-});
-
-function redirectLogin(){
-  const base = location.pathname.includes("/")
-    ? location.pathname.split("/").slice(0,-1).join("/")
-    : "";
-  location.href = base + "/login.html";
+if(!pin || !exp || Date.now() > exp){
+  localStorage.clear();
+  location.replace("login.html");
 }
 </script>
 
@@ -85,47 +96,55 @@ function redirectLogin(){
 <div class="details">
   <h2 id="title"></h2>
   <div class="meta" id="meta"></div>
-  <div class="synopsis" id="synopsis"></div>
+  <p class="synopsis" id="synopsis"></p>
 
   <div class="actions">
-    <button onclick="shareWA()">WhatsApp</button>
-    <button onclick="shareMail()">Gmail</button>
-    <button onclick="shareTT()">TikTok</button>
-    <button onclick="copyShare()">Copy</button>
+    <button class="watch" onclick="watchNow()">▶ WATCH NOW</button>
+    <button class="share" onclick="openShare()">🔗 SHARE</button>
   </div>
 </div>
 
+<!-- SHARE OPTIONS -->
+<div class="shareSheet" id="shareSheet">
+  <button onclick="shareWA()">WhatsApp</button>
+  <button onclick="shareIMO()">IMO</button>
+  <button onclick="shareTT()">TikTok</button>
+  <button onclick="closeShare()">Cancel</button>
+</div>
+
+<!-- RECOMMENDATIONS -->
+<div class="reco">
+  <h3>Recommended for you</h3>
+  <div class="recoRow" id="reco"></div>
+</div>
+
 <script>
-/* ===== READ PARAMS ===== */
+/* ===== PARAMS ===== */
 const q = new URLSearchParams(location.search);
+const movieId = q.get("id");
 
-const title     = q.get("title");
-const rawVideo  = q.get("video");
-const year      = q.get("year");
-const country   = q.get("country");
-const duration  = q.get("duration");
-const synopsis  = q.get("synopsis");
+const movie = MOVIES.find(m => m.id === movieId);
+if(!movie) location.replace("movies.html");
 
-if(!rawVideo || !title){
-  location.href = "movies.html";
-}
+/* ===== DETAILS ===== */
+title.textContent = movie.title;
+meta.textContent = `${movie.genre}${movie.duration ? " • "+movie.duration : ""}`;
+synopsis.textContent = movie.synopsis;
 
-/* ===== VIDEO NORMALIZER ===== */
-function getEmbed(url){
+/* ===== VIDEO NORMALIZER + RESUME ===== */
+function embed(url){
+  const resume = Number(localStorage.getItem("resume_"+movie.id)) || 0;
 
-  if(url.includes("youtube.com/watch")){
-    return "https://www.youtube.com/embed/" +
-      new URL(url).searchParams.get("v");
-  }
-
-  if(url.includes("youtu.be/")){
-    return "https://www.youtube.com/embed/" +
-      url.split("youtu.be/")[1];
+  if(url.includes("youtube")){
+    const id = url.includes("youtu.be")
+      ? url.split("youtu.be/")[1]
+      : new URL(url).searchParams.get("v");
+    return `https://www.youtube.com/embed/${id}?start=${resume}`;
   }
 
   if(url.includes("vimeo.com")){
-    return "https://player.vimeo.com/video/" +
-      url.split("/").pop();
+    const id = url.split("/").pop();
+    return `https://player.vimeo.com/video/${id}#t=${resume}s`;
   }
 
   if(url.includes("drive.google.com")){
@@ -136,63 +155,68 @@ function getEmbed(url){
   return url;
 }
 
-document.getElementById("player").innerHTML =
-  `<iframe id="videoFrame" src="${getEmbed(rawVideo)}" allowfullscreen></iframe>`;
-
-/* ===== DETAILS ===== */
-document.getElementById("title").textContent = title;
-document.getElementById("meta").textContent =
-  `${country} • ${year} • ${duration}`;
-document.getElementById("synopsis").textContent = synopsis;
-
-/* ===== SHARE ===== */
-const HOME_URL = location.origin + "/movies.html";
-
-const shareText =
-`${title}
-
-Country: ${country}
-Year: ${year}
-Duration: ${duration}
-
-${synopsis}
-
-Watch on BUSANSO NATION:
-${HOME_URL}`;
-
-function shareWA(){
-  location.href = `https://wa.me/?text=${encodeURIComponent(shareText)}`;
-}
-function shareMail(){
-  location.href = `mailto:?subject=${encodeURIComponent(title)}&body=${encodeURIComponent(shareText)}`;
-}
-function shareTT(){
-  location.href = `https://www.tiktok.com/share?text=${encodeURIComponent(shareText)}`;
-}
-function copyShare(){
-  navigator.clipboard.writeText(shareText);
-  alert("Copied");
+/* ===== PLAYER ===== */
+function loadPlayer(){
+  player.innerHTML =
+    `<iframe id="videoFrame" src="${embed(movie.video)}" allowfullscreen></iframe>`;
 }
 
-/* ===== MOBILE FULLSCREEN ===== */
-function isMobile(){
-  return /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+/* ===== WATCH NOW ===== */
+function watchNow(){
+  loadPlayer();
+  setTimeout(goFullscreen, 500);
 }
+
+/* ===== FULLSCREEN ===== */
 function goFullscreen(){
   const f = document.getElementById("videoFrame");
   if(!f) return;
 
-  try{
-    if(f.requestFullscreen){
-      f.requestFullscreen().catch(()=>{});
-    }
-
-    if(screen.orientation && screen.orientation.lock){
-      screen.orientation.lock("landscape").catch(()=>{});
-    }
-  }catch(e){}
+  f.requestFullscreen?.();
+  screen.orientation?.lock("landscape").catch(()=>{});
 }
 
+/* ===== SAVE RESUME (BEST EFFORT) ===== */
+window.addEventListener("beforeunload", ()=>{
+  localStorage.setItem("resume_"+movie.id, 30); // safe fallback
+});
+
+/* ===== SHARE ===== */
+const SITE_URL = location.origin + "/movies.html";
+const shareText =
+`${movie.title}
+
+Genre: ${movie.genre}
+Duration: ${movie.duration || "N/A"}
+
+${movie.synopsis}
+
+Watch on BUSANSO:
+${SITE_URL}`;
+
+function openShare(){ shareSheet.style.display="block"; }
+function closeShare(){ shareSheet.style.display="none"; }
+
+function shareWA(){
+  location.href=`https://wa.me/?text=${encodeURIComponent(shareText)}`;
+}
+function shareIMO(){
+  location.href=`imo://send?text=${encodeURIComponent(shareText)}`;
+}
+function shareTT(){
+  location.href=`https://www.tiktok.com/share?text=${encodeURIComponent(shareText)}`;
+}
+
+/* ===== RECOMMENDATIONS ===== */
+MOVIES
+  .filter(m => m.genre === movie.genre && m.id !== movie.id)
+  .slice(0,8)
+  .forEach(m=>{
+    const img=document.createElement("img");
+    img.src=m.poster;
+    img.onclick=()=>location.href=`watch.html?id=${m.id}`;
+    reco.appendChild(img);
+  });
 </script>
 
 </body>
